package progetto.gioco.game.model.oggetti;

import progetto.gioco.engine.model.BaseOggetto;

public class Oggetto extends BaseOggetto {
    public Oggetto(String id, String nome) {
        super(id, nome);
    }

    @Override
    public void usa() {
        // TODO Auto-generated method stub
        
    }
}
